RESOLVED FIXED64606
Overlay scrollbars don't pulse when an overflow area is unhidden
https://bugs.webkit.org/show_bug.cgi?id=64606
Summary Overlay scrollbars don't pulse when an overflow area is unhidden
Tim Horton
Reported 2011-07-15 11:09:24 PDT
Created attachment 101005 [details] testcase <rdar://problem/9390674> Making the overlay area visible in the attached test case (by pressing the button twice) should cause the overlay scrollbars to pulse. This doesn't happen currently because we don't keep the system's scrollbar implementation's enabled state up to date with the enabled state of our internal scrollbar representation (we only set it when painting the scrollers!) This would appear to have regressed in r84682, but that's only because that revision made us only hit the pulsing and scroller-painting code once (previously we'd hit it more than once, and the scrollbars would be enabled the second time through due to having been updated the first time around!) I have a patch to fix, will post shortly.
Attachments
testcase (5.24 KB, text/html)
2011-07-15 11:09 PDT, Tim Horton
no flags
patch (406.39 KB, patch)
2011-07-15 17:33 PDT, Tim Horton
no flags
revised, using svn-create-patch, hopefully the binaries will work now! (8.95 KB, patch)
2011-07-15 20:25 PDT, Tim Horton
no flags
style fix (8.95 KB, patch)
2011-07-15 20:30 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2011-07-15 17:33:02 PDT
Tim Horton
Comment 2 2011-07-15 17:54:19 PDT
I'll reupload when I get home with a proper SVN patch, didn't realize the bots don't like git binary patches.
Tim Horton
Comment 3 2011-07-15 20:25:27 PDT
Created attachment 101087 [details] revised, using svn-create-patch, hopefully the binaries will work now!
WebKit Review Bot
Comment 4 2011-07-15 20:28:10 PDT
Attachment 101087 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/WebCore.exp.in', u'Source/W..." exit_code: 1 Source/WebCore/platform/ScrollbarTheme.h:45: Missing space inside { }. [whitespace/braces] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5 2011-07-15 20:30:22 PDT
Created attachment 101088 [details] style fix
WebKit Review Bot
Comment 6 2011-07-15 22:15:49 PDT
Comment on attachment 101088 [details] style fix Clearing flags on attachment: 101088 Committed r91146: <http://trac.webkit.org/changeset/91146>
WebKit Review Bot
Comment 7 2011-07-15 22:15:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.