Overlay scrollbars in overflow areas no longer pulse when revealed https://bugs.webkit.org/show_bug.cgi?id=64606 <rdar://problem/9390674>

Patch by Tim Horton <timothy_horton@apple.com> on 2011-07-15
Reviewed by Simon Fraser.

Ensure that the state of the scrollbar implementation is kept in sync
with WebCore's internal representation. Previously, we synchronized them
at paint time, causing pulsing to be skipped due to the scrollbars being
disabled.

Source/WebKit/mac:

* WebCoreSupport/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

Source/WebKit2:

* WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

Canonical link: https://commits.webkit.org/80398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91146 268f45cc-cd09-0410-ab3c-d52691b4dbfc