Source/WebCore/platform/Scrollbar.cpp
@@ -459,6 +459,7 @@ void Scrollbar::setEnabled(bool e)
     if (m_enabled == e)
         return;
     m_enabled = e;
+    theme()->updateEnabledState(this);
     invalidate();
 }
 
