Source/WebKit/mac/WebCoreSupport/WebSystemInterface.mm
@@ -123,6 +123,7 @@ void InitWebCoreSystemInterface(void)
     INIT(CreateCTTypesetterWithUniCharProviderAndOptions);
     INIT(MakeScrollbarPainter);
     INIT(ScrollbarPainterSetDelegate);
+    INIT(ScrollbarPainterSetEnabled);
     INIT(ScrollbarPainterPaint);
     INIT(ScrollbarPainterForceFlashScrollers);
     INIT(ScrollbarThickness);
